--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Next.js Storyblok Ultimate Tutorial",
   "main": "index.js",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,6 +12,7 @@
   },
   "dependencies": {
     "@storyblok/react": "^2.4.7",
+    "gridstack": "^11.1.1",
     "next": "^12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
