--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@storyblok/react": "^2.4.7",
-    "next": "^12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "15.0.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "eslint-config-next": "15.0.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.2.1"
   }
