render rich text from storyblok in modal

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@storyblok/react": "^2.4.7",
     "next": "15.0.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "storyblok-rich-text-react-renderer": "^2.9.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
