--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@storyblok/react": "^2.4.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "next": "15.0.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
